# fast-api-boilerplate

./: .gitignore  .pycodestyle  README.md  pyproject.toml
src/: main.py
src/api/v1/: api.py
src/api/v1/endpoints/: utils.py
src/config/: settings.py
src/services/: mongo_client.py
